2008-01-18  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: updated documentation to also list build systems
	that are supported, and to add some more consistency in how JHBuild is
	spelt.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/moduleset.py:
	added --soft-deps and --clusters options to the dot command; the
	--soft-deps option will add dotted lines from the modules to their soft
	dependencies; the --clusters option will group modules from metamodules
	together.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: switched waf from svn to tarball, patch
	by Gustavo Carneiro  (closes: #509131)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules, patches/python-2.4.4-lib64.patch: added
	patch to Python so it works better on x86_64  (closes: #505128)
	(forward-ported Mandriva patch from 2.4.1 to 2.4.4)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: updated Guile from 1.8.0 to 1.8.3.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.22.modules,
	modulesets/gnome-external-deps-2.22.modules: moved autogen to external
	deps module set as it is a dependency of anjuta.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules, modulesets/gnome-2.22.modules: moved
	guile to the bootstrap modulesets, as suggested on desktop-devel-list.
	(closes: #510066 which was about a missing guile dependency).

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* tests/tests.py: started unit tests, with unit tests covering build
	ordering.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py: fixed skip option, broken by new build
	ordering method.

2008-01-18  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-2.22.modules: Added gtkmm-utils, with the
	savannah repo reference, and paperbox modules.

2008-01-17  Luca Ferretti  <elle.uca@libero.it>
