@@ -1,5 +1,11 @@
 2008-01-18  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/moduleset.py, tests/tests.py: fixed skip option, as skipped
+	modules dependencies were not ignored (and fixed test case that I got
+	wrong).
+
+2008-01-18  Frederic Peters  <fpeters@0d.be>
+
 	* doc/C/jhbuild.xml: updated documentation to also list build systems
 	that are supported, and to add some more consistency in how JHBuild is
 	spelt.
